test/files/neg/t910.check
t910.scala:4: error: type mismatch;
 found   : Seq[Char]
 required: Seq[Int]
    val y: Seq[Int] = rest
                      ^
1 error
